[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Camera.gd" type="Script" id=1]

[node name="Camera" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 0.766044, 0.642788, 0, -0.642788, 0.766044, 18.5, 0, 0 )
script = ExtResource( 1 )

[node name="CameraObj" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20 )
current = true

[node name="CameraObjTween" type="Tween" parent="CameraObj"]

[node name="CameraTween" type="Tween" parent="."]
